[package]
name                  = "pacquet-cli"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "pacquet"
path = "src/bin/main.rs"

[dependencies]
pacquet-pnpr-client              = { workspace = true }
pacquet-executor                 = { workspace = true }
pacquet-fs                       = { workspace = true }
pacquet-lockfile                 = { workspace = true }
pacquet-network                  = { workspace = true }
pacquet-config                   = { workspace = true }
pacquet-package-manifest         = { workspace = true }
pacquet-package-manager          = { workspace = true }
pacquet-package-is-installable   = { workspace = true }
pacquet-registry                 = { workspace = true }
pacquet-reporter                 = { workspace = true }
pacquet-tarball                  = { workspace = true }
pacquet-diagnostics              = { workspace = true }
pacquet-workspace                = { workspace = true }
pacquet-workspace-projects-graph = { workspace = true }

clap         = { workspace = true }
derive_more  = { workspace = true }
dialoguer    = { workspace = true }
dunce        = { workspace = true }
futures-util = { workspace = true }
home         = { workspace = true }
indexmap     = { workspace = true }
node-semver  = { workspace = true }
miette       = { workspace = true }
owo-colors   = { workspace = true }
pipe-trait   = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tabled       = { workspace = true }
tokio        = { workspace = true }

[dev-dependencies]
pacquet-store-dir     = { workspace = true }
pacquet-testing-utils = { workspace = true }
pnpr                  = { workspace = true }

assert_cmd        = { workspace = true }
command-extra     = { workspace = true }
flate2            = { workspace = true }
insta             = { workspace = true }
mockito           = { workspace = true }
pretty_assertions = { workspace = true }
serde-saphyr      = { workspace = true }
tar               = { workspace = true }
tempfile          = { workspace = true }
walkdir           = { workspace = true }

[lints]
workspace = true
