[package]
name                  = "pacquet-cli"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "pacquet"
path = "src/bin/main.rs"

[dependencies]
pacquet-catalogs-config                   = { workspace = true }
pacquet-cmd-shim                          = { workspace = true }
pacquet-crypto-hash                       = { workspace = true }
pacquet-pnpr-client                       = { workspace = true }
pacquet-env-installer                     = { workspace = true }
pacquet-executor                          = { workspace = true }
pacquet-fs                                = { workspace = true }
pacquet-graph-hasher                      = { workspace = true }
pacquet-hooks                             = { workspace = true }
pacquet-lockfile                          = { workspace = true }
pacquet-modules-yaml                      = { workspace = true }
pacquet-network                           = { workspace = true }
pacquet-config                            = { workspace = true }
pacquet-default-reporter                  = { workspace = true }
pacquet-package-manifest                  = { workspace = true }
pacquet-package-manager                   = { workspace = true }
pacquet-patching                          = { workspace = true }
pacquet-package-is-installable            = { workspace = true }
pacquet-registry                          = { workspace = true }
pacquet-reporter                          = { workspace = true }
pacquet-resolving-npm-resolver            = { workspace = true }
pacquet-resolving-parse-wanted-dependency = { workspace = true }
pacquet-store-dir                         = { workspace = true }
pacquet-tarball                           = { workspace = true }
pacquet-diagnostics                       = { workspace = true }
pacquet-workspace                         = { workspace = true }
pacquet-workspace-manifest-writer         = { workspace = true }
pacquet-workspace-projects-graph          = { workspace = true }
pacquet-workspace-state                   = { workspace = true }

chrono               = { workspace = true }
clap                 = { workspace = true }
derive_more          = { workspace = true }
dialoguer            = { workspace = true }
dunce                = { workspace = true }
futures-util         = { workspace = true }
home                 = { workspace = true }
indexmap             = { workspace = true }
node-semver          = { workspace = true }
miette               = { workspace = true }
owo-colors.workspace = true
pipe-trait           = { workspace = true }
rayon                = { workspace = true }
rmp-serde            = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
tabled               = { workspace = true }
tempfile             = { workspace = true }
tokio                = { workspace = true }
which                = { workspace = true }
base64               = { workspace = true }
wax                  = { workspace = true }

# Windows has no process groups, so a Job Object ties the lifetime of spawned
# children (lifecycle scripts and their descendants) to pacquet's. See
# `src/job_control.rs`.
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
pacquet-testing-utils = { workspace = true }
pnpr                  = { workspace = true }

assert_cmd        = { workspace = true }
command-extra     = { workspace = true }
flate2            = { workspace = true }
insta             = { workspace = true }
mockito           = { workspace = true }
pretty_assertions = { workspace = true }
serde-saphyr      = { workspace = true }
tar               = { workspace = true }
walkdir           = { workspace = true }

[lints]
workspace = true
