[package]
name                  = "pacquet-config"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-catalogs-types         = { workspace = true }
pacquet-config-dir             = { workspace = true }
pacquet-detect-libc            = { workspace = true }
pacquet-env-replace            = { workspace = true }
pacquet-network                = { workspace = true }
pacquet-package-is-installable = { workspace = true }
pacquet-patching               = { workspace = true }
pacquet-store-dir              = { workspace = true }
pacquet-workspace-state        = { workspace = true }

derive_more   = { workspace = true }
home          = { workspace = true }
indexmap      = { workspace = true }
miette        = { workspace = true }
node-semver   = { workspace = true }
pipe-trait    = { workspace = true }
serde         = { workspace = true }
serde-saphyr  = { workspace = true }
serde_json    = { workspace = true }
smart-default = { workspace = true }
tracing       = { workspace = true }

[target.'cfg(all(unix, not(target_os = "cygwin")))'.dependencies]
libc = { workspace = true }

[dev-dependencies]
pacquet-testing-utils = { workspace = true }

pretty_assertions = { workspace = true }
tempfile          = { workspace = true }

[lints]
workspace = true
