[package]
name                  = "pacquet-crypto-shasums-file"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-network = { workspace = true }

base64      = { workspace = true }
derive_more = { workspace = true }
miette      = { workspace = true }
pgp         = { workspace = true }
reqwest     = { workspace = true }

[dev-dependencies]
mockito           = { workspace = true }
pretty_assertions = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
