[package]
name                  = "pacquet-detect-libc"
version               = "0.0.1"
license               = "Apache-2.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
repository.workspace  = true

[dependencies]

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
