[package]
name                  = "pacquet-diagnostics"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
miette             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

[lints]
workspace = true
