[package]
name                  = "pacquet-directory-fetcher"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-diagnostics      = { workspace = true }
pacquet-git-fetcher      = { workspace = true }
pacquet-package-manifest = { workspace = true }
pacquet-store-dir        = { workspace = true }

derive_more = { workspace = true }
miette      = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
pacquet-fs            = { workspace = true }
pacquet-testing-utils = { workspace = true }

pretty_assertions = { workspace = true }
tempfile          = { workspace = true }

[lints]
workspace = true
