[package]
name                  = "pacquet-engine-runtime-node-resolver"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-crypto-shasums-file     = { workspace = true }
pacquet-lockfile                = { workspace = true }
pacquet-network                 = { workspace = true }
pacquet-resolving-resolver-base = { workspace = true }

derive_more = { workspace = true }
miette      = { workspace = true }
node-semver = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
ssri        = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
mockito           = { workspace = true }
pretty_assertions = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
