[package]
name                  = "pacquet-env-replace"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
