[package]
name                  = "pacquet-executor"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-package-manifest = { workspace = true }
pacquet-reporter         = { workspace = true }

derive_more = { workspace = true }
miette      = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }

[lints]
workspace = true
