[package]
name                  = "pacquet-exportable-manifest"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-catalogs-resolver              = { workspace = true }
pacquet-catalogs-types                 = { workspace = true }
pacquet-package-manifest               = { workspace = true }
pacquet-resolving-jsr-specifier-parser = { workspace = true }

derive_more = { workspace = true }
miette      = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
