[package]
name                 = "pacquet-fs"
description          = "Filesystem utility functions used by pacquet"
version              = "0.0.1"
publish              = false
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true }
miette      = { workspace = true }
pathdiff    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }
