[package]
name                  = "pacquet-hooks"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-crypto-hash             = { workspace = true }
serde                           = { workspace = true }
serde_json                      = { workspace = true }
async-trait                     = { workspace = true }
tokio                           = { workspace = true, features = ["rt", "process", "time", "io-util", "sync"] }
derive_more                     = { workspace = true }
pacquet-resolving-resolver-base = { workspace = true }
pacquet-lockfile                = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
