[package]
name                  = "pacquet-lockfile"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-catalogs-types   = { workspace = true }
pacquet-crypto-hash      = { workspace = true }
pacquet-diagnostics      = { workspace = true }
pacquet-package-manifest = { workspace = true }

derive_more      = { workspace = true }
indexmap         = { workspace = true }
node-semver      = { workspace = true }
pipe-trait       = { workspace = true }
serde            = { workspace = true }
serde-saphyr     = { workspace = true }
serde_json       = { workspace = true }
ssri             = { workspace = true }
split-first-char = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
text-block-macros = { workspace = true }

[lints]
workspace = true
