[package]
name                  = "pacquet-napi"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pacquet-config                            = { workspace = true }
pacquet-catalogs-types                    = { workspace = true }
pacquet-engine-runtime-bun-resolver       = { workspace = true }
pacquet-engine-runtime-deno-resolver      = { workspace = true }
pacquet-engine-runtime-node-resolver      = { workspace = true }
pacquet-hooks                             = { workspace = true }
pacquet-lockfile                          = { workspace = true }
pacquet-network                           = { workspace = true }
pacquet-pack                              = { workspace = true }
pacquet-package-manager                   = { workspace = true }
pacquet-resolving-deps-resolver           = { workspace = true }
node-semver                               = { workspace = true }
pacquet-package-manifest                  = { workspace = true }
pacquet-reporter                          = { workspace = true }
pacquet-resolving-default-resolver        = { workspace = true }
pacquet-resolving-git-resolver            = { workspace = true }
pacquet-resolving-local-resolver          = { workspace = true }
pacquet-resolving-npm-resolver            = { workspace = true }
pacquet-resolving-parse-wanted-dependency = { workspace = true }
pacquet-resolving-resolver-base           = { workspace = true }
pacquet-resolving-tarball-resolver        = { workspace = true }
pacquet-store-dir                         = { workspace = true }
pacquet-tarball                           = { workspace = true }
pacquet-workspace                         = { workspace = true }

async-trait = { workspace = true }
dashmap     = { workspace = true }
indexmap    = { workspace = true }
miette      = { workspace = true }
napi        = { workspace = true }
napi-derive = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
