[package]
name                 = "pacquet-network-web-auth"
description          = "Web-based authentication flow with QR code display and token polling"
version              = "0.0.1"
publish              = false
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[dependencies]
crossterm           = { workspace = true }
derive_more         = { workspace = true }
dialoguer           = { workspace = true }
open                = { workspace = true }
pacquet-diagnostics = { workspace = true }
pacquet-reporter    = { workspace = true }
qrcode              = { workspace = true }
reqwest             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt", "sync", "time"] }
url                 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
